@@ -1,6 +1,5 @@
 <?php
 
-
 // ******************************************************************
 // This is the standard TypoScript guestbook
 // ******************************************************************
