@@ -1,3 +1,6 @@
+2014-11-22 Franz Holzinger <franz@fholzinger.com>
+	* ready for TYPO3 6.2. It requires tslib_fetce.
+
 2012-03-21 Franz Holzinger <franz@ttproducts.de>
 	* fix missing semicolon error in guest_submit.php
 
